fix contrast-check

--- a/sass/contrast.scss
+++ b/sass/contrast.scss
@@ -89,10 +89,10 @@ $planifolia-contrast-light-default: white !default;
 
 /// Warn if the contrast is below a threshold
 ///
-/// @param {color} $bg background color
-/// @param {color} $fg foreground color
+/// @param {color} $color1 background color
+/// @param {color} $color2 foreground color
 /// @param {number} $threshold [4.5]
-@function contrast-check($bg, $fg, $threshold: 4.5) {
+@function contrast-check($color1, $color2, $threshold: 4.5) {
   @if contrast($color1, $color2) < $threshold {
     @warn 'contrast #{$contrast} between #{$color1} and #{$color2} too low!';
   }
